# hh_api_integration

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  test_api.py  test_db.py  test_db_fix.py
src/: main.py
src/api/: company_api.py  hh_api.py
src/database/: db_manager.py
src/models/: vacancy.py
src/storage/: json_saver.py
tests/: tests.py
